--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,49 @@
+/* cinzel-decorative-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Cinzel Decorative';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/cinzel-decorative-v14-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('./fonts/cinzel-decorative-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./fonts/cinzel-decorative-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./fonts/cinzel-decorative-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('./fonts/cinzel-decorative-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./fonts/cinzel-decorative-v14-latin-regular.svg#CinzelDecorative') format('svg'); /* Legacy iOS */
+  }
+  /* cinzel-decorative-700 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Cinzel Decorative';
+    font-style: normal;
+    font-weight: 700;
+    src: url('./fonts/cinzel-decorative-v14-latin-700.eot'); /* IE9 Compat Modes */
+    src: url('./fonts/cinzel-decorative-v14-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./fonts/cinzel-decorative-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./fonts/cinzel-decorative-v14-latin-700.woff') format('woff'), /* Modern Browsers */
+         url('./fonts/cinzel-decorative-v14-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./fonts/cinzel-decorative-v14-latin-700.svg#CinzelDecorative') format('svg'); /* Legacy iOS */
+  }
+
+
+
 body {
     margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url("../img/5_background/desertBg.jpg");
+    background-position: center;
+    background-size:cover;
+    background-repeat: no-repeat;
+    max-height: 100vh;
+}
+
+h1{
+    font-family: 'Cinzel Decorative', Arial, Helvetica, sans-serif;
+    font-size: 4rem;
+    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
 }
 
 .d-none {
@@ -13,10 +53,12 @@ body {
 
 canvas {
     background-color: black;
+    display: block;
 }
 
 .mainpage-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -33,3 +75,19 @@ canvas {
     background-size: 100% 100%;
 
 } 
+
+@media screen and (max-width: 720px){
+    h1{
+        display: none;
+    }
+
+    .start-container{
+        width: 100% !important;
+        height: 100vh;
+    }
+    canvas {
+        height: 100vh;
+        width: 100%;
+    };
+}
+
