--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
  font-family: 'Cinzel Decorative';
   display: flex;
   justify-content: center;
-  width: 4rem;
+  width: clamp(8rem, 5vw, 6rem);
   height: 3rem;
   background-color: #fbeee0;
   border: 2px solid #422800;
@@ -81,12 +81,6 @@ body {
     margin-right: auto;
 }
 
-@media (min-width: 768px) {
-  .button-74 {
-    min-width: 120px;
-    padding: 0 25px;
-  }
-}
 
 h1{
     font-family: 'Cinzel Decorative', Arial, Helvetica, sans-serif;
@@ -142,7 +136,7 @@ canvas {
     font-weight: bold;
     display: flex;
     align-items: center;
-    width: 23%;
+    width: 24%;
     justify-content: center;
     gap: 6px;
 }
@@ -161,27 +155,115 @@ rotate: 90deg;
 #settings-frame{
     display: flex;
     justify-content: space-between;
-    width: 90%;
+    width: 95%;
+}
+
+.ingame-settings{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    bottom: 1%;
+    left: 0;
+    gap: 24px;
+    z-index: 9;
 }
 
 .attack-button{
-    position: absolute;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     border: 2px solid orange;
-    left: 5%;
-    bottom: 5%;
+    left: 50%;
+    bottom: 1%;
+    z-index: 10;
+    cursor: pointer;
+}
+
+.settings-button{
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 2px solid orange;
+    bottom: 1%;
+    left: 47%;
+    z-index: 10;
+    cursor: pointer;
+}
+
+.settings-button > img{
+    object-fit: contain;
+    width: 60%;
 }
 
 .attack-button > img{
     rotate: 30deg;
     object-fit: contain;
-    width: 100%;
+    width: 60%;
+}
+
+
+.row-ingame{
+    position: absolute;
+    display: flex;
+    bottom: 1%;
+    width: 98%;
+    justify-content: space-between;
+}
+
+.key-ingame-left{
+    display: flex;
+    gap: 6px;
+
+
+}
+
+.key-ingame-middle{
+    display: flex;
+    gap: 6px;
+}
+
+.key-ingame-right{
+display: flex;
+gap: 6px;
+
+
+}
+
+.key-ingame{
+    border: 2px solid orange;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    font-family: "Cinzel Decorative";
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    gap: 6px;
+    color: white;
+}
+
+#control-btn-ingame{
+display: flex;
+}
+
+
+#settings-frame-ingame{
+display: flex;
+width: 100%;
+justify-content: space-between;
+
 }
 @media screen and (max-width: 720px){
     h1{
